[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/gdtrees/UI/Widgets/InputSliderVector2.gd" type="Script" id=1]
[ext_resource path="res://addons/gdtrees/UI/Widgets/ProgressInput.tscn" type="PackedScene" id=2]

[node name="InputVector2" type="HBoxContainer"]
margin_right = 213.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 100 )
alignment = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 104.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="X" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_right = 105.0
margin_bottom = 48.0
max_value = 10.0
step = 1.0
text = "X:"

[node name="Y" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_top = 52.0
margin_right = 105.0
margin_bottom = 100.0
max_value = 10.0
step = 1.0
text = "Y:"

[connection signal="value_changed" from="HBoxContainer/X" to="." method="_on_X_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Y" to="." method="_on_Y_value_changed"]
